@@ -503,6 +503,10 @@ Number mode, return the index of the selected row. (starting at 0)
 .RS
 .nf
 Active row, mark row X as active. (starting at 0)
+You can specify single element: \-a 3
+A range: \-a 3\-8
+or a set of rows: \-a 0,2
+Or any combination: \-a 0,2\-3,9
 .fi
 .RE
 .PP
@@ -511,6 +515,10 @@ Active row, mark row X as active. (starting at 0)
 .RS
 .nf
 Urgent row, mark row X as urgent. (starting at 0)
+You can specify single element: \-u 3
+A range: \-u 3\-8
+or a set of rows: \-u 0,2
+Or any combination: \-u 0,2\-3,9
 .fi
 .RE
 .SS Message dialog
